--- a/app/src/main/res/xml/widget_info.xml
+++ b/app/src/main/res/xml/widget_info.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android">
-    <!-- Especifica el layout que se usará para el widget -->
     <android:initialLayout>@layout/widget_layout</android:initialLayout>
 
     <!-- Intervalo de actualización en milisegundos (aquí se actualiza cada minuto) -->
     <android:updatePeriodMillis>60000</android:updatePeriodMillis>
 
-    <!-- Categoría del widget, lo que lo permite agregar al home screen -->
+    <!-- Categoría del widget -->
     <android:widgetCategory>home_screen</android:widgetCategory>
 
     <!-- Definir el tamaño mínimo del widget -->
