--- a/app/src/main/res/layout/widget_layout.xml
+++ b/app/src/main/res/layout/widget_layout.xml
@@ -4,14 +4,14 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:background="#FFFFFF"
-    android:padding="16dp"
+    android:padding="0dp"
     android:gravity="center">
 
-
+    <!-- Imagen ajustada al ancho disponible -->
 <ImageView
 android:id="@+id/widgetImage"
-android:layout_width="0dp"
-    android:layout_height="match_parent"
-    android:layout_weight="1"
-    android:src="@drawable/prueba1" />
+android:layout_width="match_parent"
+    android:layout_height="200dp"
+    android:src="@drawable/banner1"
+    android:scaleType="centerCrop" />
     </LinearLayout>
